--- a/Frustum and Occlusion Culling/Frustum and Occlusion Culling.csproj
+++ b/Frustum and Occlusion Culling/Frustum and Occlusion Culling.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Engine\ModelDataExtractor.cs" />
     <Compile Include="Engine\SimpleModel.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="OctTree.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuadTree.cs" />
