--- a/Frustum and Occlusion Culling/Frustum and Occlusion Culling.csproj
+++ b/Frustum and Occlusion Culling/Frustum and Occlusion Culling.csproj
@@ -41,6 +41,8 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="ColorModel.cs" />
+    <Compile Include="CustomEffectModel.cs" />
     <Compile Include="Engine\Camera.cs" />
     <Compile Include="Engine\DebugEngine.cs" />
     <Compile Include="Engine\GameObject3D.cs" />
@@ -50,10 +52,12 @@
     <Compile Include="Engine\ModelDataExtractor.cs" />
     <Compile Include="Engine\SimpleModel.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="Material.cs" />
     <Compile Include="OctTree.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuadTree.cs" />
+    <Compile Include="TextureModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
@@ -63,11 +67,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\Effects\BasicTexture.fx" />
+    <Content Include="Content\Effects\EmptyEffect.fx" />
+    <Content Include="Content\Textures\blue.png" />
+    <Content Include="Content\Textures\cubecover.png" />
+    <Content Include="Content\Textures\purple.png" />
+    <Content Include="Content\Textures\thumbnail\blue.png" />
+    <Content Include="Content\Textures\thumbnail\purple.png" />
+    <Content Include="Content\Textures\white.png" />
     <Content Include="Icon.ico" />
   </ItemGroup>
   <ItemGroup>
     <MonoGameContentReference Include="Content\Content.mgcb" />
     <None Include="app.manifest" />
+    <None Include="Content\Models\ball.fbx" />
+    <None Include="Content\Models\house.fbx" />
+    <None Include="Content\Models\wall.fbx" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
